Fix readability

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ h6 {
     font-family: 'Lato', Helvetica, sans-serif;
     font-weight: 700;
     transition: font-size 0.25s ease;
-    letter-spacing: -3px;
+    letter-spacing: 1px;
     margin-bottom: 15px;
 }
 
@@ -79,6 +79,7 @@ p {
     font-size: 16px;
     line-height: 15px;
     margin: 0 0 15px;
+    line-height: 23px;
 }
 
 a {
@@ -311,10 +312,10 @@ textarea {
 ======================================== */
 
 .site-main {
+    padding: 30px 15px;
     position: relative;
     width: 90%;
     margin: auto;
-    padding:  30px 15px;
 }
 
 .site-main-background {
@@ -330,8 +331,8 @@ textarea {
 }
 
 .site-main-header {
-    text-align: center;
     margin-bottom: 30px;
+    text-align: center;
 }
 
 .site-main-section-header {
@@ -361,6 +362,7 @@ textarea {
     font-weight: 700;
     text-transform: uppercase;
     margin-bottom: 5px;
+    line-height: 26px;
 }
 
 .recipe-preview {
